# tabular-reinforcement-learning

./: .gitignore  README.md  bandit.ipynb  pyproject.toml
plotting/: __init__.py  bandits.py
