[project]
name = "tabular-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbconvert[webpdf]>=7.17.0",
    "numpy>=2.4.2",
]
